# Personal-Finance-Tracker

finance-tracker/: Cargo.toml  diesel.toml  docker-compose.yml  guards.rs
finance-tracker/migrations/2025-04-27-063411_create_users/: up.sql
finance-tracker/migrations/2025-05-02-122859_create_categories/: up.sql
finance-tracker/migrations/2025-05-02-150118_create_transactions/: up.sql
finance-tracker/src/: db.rs  main.rs  schema.rs
finance-tracker/src/auth/: handlers.rs  mod.rs  models.rs  password.rs  schema.rs  token.rs
finance-tracker/src/categories/: handlers.rs  models.rs  schema.rs
finance-tracker/src/reports/: handlers.rs  mod.rs  models.rs
finance-tracker/src/transactions/: handlers.rs  mod.rs  models.rs  schema.rs
