[package]
name = "finance-tracker"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5", features = ["json"] }
diesel = { version = "2.1.0", features = ["postgres", "r2d2", "uuid", "chrono"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9.1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4" }
argon2 = "0.5.2"
rand_core = { version = "0.6.4", features = ["std"] }
password-hash = "0.5.0"
dotenv = "0.15.0"
